--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
         "url": "https://github.com/satrong/node-crawler/issues"
     },
     "homepage": "http://www.xiaoboy.com",
-    "devDependencies": {
-        "cheerio": "^0.18.0",
-        "mkdirp": "^0.5.0",
-        "request": "^2.51.0"
-    },
     "dependencies": {
         "async": "^0.9.0",
         "iconv-lite": "^0.4.6",
         "ws": "^0.7.1",
-        "ejs": "^2.2.4"
+        "ejs": "^2.2.4",
+        "cheerio": "^0.18.0",
+        "mkdirp": "^0.5.0",
+        "request": "^2.51.0"
     }
 }
